<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lang">tr</string>
    <string name="yukleniyor">Yükleniyor…</string>
    <string name="mevcutKonum">Mevcut Konum</string>
    <string name="no">HAYIR</string>
    <string name="openSettings">AYARLARI AÇ</string>
    <string name="CurrentDetails">Güncel Detaylar</string>
    <string name="humidityTxt">Nem Oranı (%)</string>
    <string name="uvTxt">UV İndeksi</string>
    <string name="rainTxt">Yağış</string>
    <string name="windTxt">Rüzgar</string>
    <string name="kphTxt">km/h</string>
    <string name="degre"> %1$s°</string>
    <string name="humidity"> %1$s</string>
    <string name="totalPrecip">Günlük Toplam hacim %1$s mm</string>
    <string name="time">%1$s:00</string>
    <string name="houryl_line">__________</string>

    <!--    menu item title-->
    <string name="today">Bugün</string>
    <string name="tomorrow">Yarın</string>
    <string name="threedays">3 Gün</string>
    <string name="search">Şehir Ara</string>

    <!--    tomorrow-->
    <string name="max_minTemp">Gündüz %1$s, Gece %2$s</string>
    <string name="max_minWind">%1$s - %2$s</string>

    <!--    three day-->
    <string name="day_month_dy">%1$s, %2$s %3$s </string>
    <!--    search -->
    <string name="searchViewText">Yer Arama</string>

    <!--    konum aç isteği-->
    <string name="location_enabled_request">Size en iyi hizmeti sağlamak için uygulamanın cihazınızın konumuna erişmesine izin verin.</string>
    <string name="location_permission">Konum verisi alınamıyor. Lütfen cihazınızın konumunu açıp yeniden deneyin.</string>
    <string name="tryagain">Yeniden Deneyin</string>
    <string name="ok">Tamam</string>
</resources>