<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_is_of_Fragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                android:layout_marginBottom="50dp"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/location_permission" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:text="@string/location_permission"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tryy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tryy"
                app:backgroundTint="@null"
                android:background="@color/cloudBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tryagain"
                android:paddingVertical="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/searchcity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/searchcity"
                app:backgroundTint="@null"
                android:background="@drawable/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/cloudBackground"
                android:paddingVertical="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>