<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloudBackground"
    tools:context=".ui.tomorrow.TomorrowFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#699ECC"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="SEHİR ADİ" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="20 Mayıs,2:40 ÖS" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:text="2°" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />


        <TextView
            android:id="@+id/condition"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/degree"
            app:layout_constraintTop_toBottomOf="@id/animationView"
            tools:text="Parçalı Bulutlu" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/condition" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recy" />

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1">

            <TextView
                android:id="@+id/timelytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/CurrentDetails"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/humiditytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timelytxt"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/humidityTxt"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timelytxt"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/humiditytxt"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uvtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/humiditytxt"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/uvTxt"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/humidity"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/humiditytxt"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="17sp" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rel" />

        <RelativeLayout
            android:id="@+id/relRain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <TextView
                android:id="@+id/raintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/rainTxt"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyRain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/raintxt"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/totalprecip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyRain"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                tools:text="Günlük toplam hacim" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relRain" />

        <RelativeLayout
            android:id="@+id/relWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3">

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/windTxt"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wind_kph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wind"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/wind"
                android:textSize="50sp"
                tools:text="7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wind"
                android:layout_marginStart="10dp"
                android:layout_marginTop="47dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/wind_kph"
                android:fontFamily="sans-serif-light"
                android:text="@string/kphTxt"
                android:textColor="@color/white"
                android:textSize="17sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyWind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/wind_kph"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>